[package]
name = "gitem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18.0"
alpm = "2.2.1"
alpm-utils = "1.1.2"
crossterm = "0.23"
clap = { version = "3.2.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
warp = "0.3"

[dependencies.serde_with]
version = "1.14.0"
features = [ "json" ]